Fix colour contrast notification banner licence pages

--- a/ds_judgements_public_ui/sass/includes/_standard_content.scss
+++ b/ds_judgements_public_ui/sass/includes/_standard_content.scss
@@ -89,7 +89,7 @@
     }
 
     .govuk-warning-text,
-    .govuk-notification-banner_red,
+    .govuk-notification-banner_blue,
     .button-primary {
       margin-bottom: $space-8;
     }
